server-dev.log

> project-ecommerce@1.0.0 dev:server C:\Users\user\Documents\ecommerce-react
> pnpm --filter server dev


> server@1.0.0 dev C:\Users\user\Documents\ecommerce-react\server
> tsx watch src/server.ts


node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [ERR_MODULE_NOT_FOUND]: Cannot find package '@ecommerce/schemas' imported from C:\Users\user\Documents\ecommerce-react\server\src\routes\auth.ts
Did you mean to import "@ecommerce/schemas/dist/index.js"?
    at Object.getPackageJSONURL (node:internal/modules/package_json_reader:266:9)
    at packageResolve (node:internal/modules/esm/resolve:767:81)
    at moduleResolve (node:internal/modules/esm/resolve:853:18)
    at defaultResolve (node:internal/modules/esm/resolve:983:11)
    at nextResolve (node:internal/modules/esm/hooks:748:28)
    at resolveBase (file:///C:/Users/user/Documents/ecommerce-react/node_modules/.pnpm/tsx@4.20.6/node_modules/tsx/dist/esm/index.mjs?1769496357162:2:3744)
    at resolveDirectory (file:///C:/Users/user/Documents/ecommerce-react/node_modules/.pnpm/tsx@4.20.6/node_modules/tsx/dist/esm/index.mjs?1769496357162:2:4243)
    at resolveTsPaths (file:///C:/Users/user/Documents/ecommerce-react/node_modules/.pnpm/tsx@4.20.6/node_modules/tsx/dist/esm/index.mjs?1769496357162:2:4984)
    at resolve (file:///C:/Users/user/Documents/ecommerce-react/node_modules/.pnpm/tsx@4.20.6/node_modules/tsx/dist/esm/index.mjs?1769496357162:2:5361)
    at nextResolve (node:internal/modules/esm/hooks:748:28) {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v22.19.0
14.49.58 [tsx] change in ./src\routes\auth.ts Rerunning...
cAttempting to connect to the database...
Database connected successfully.
Synchronizing database models...
Database synchronized successfully.
🚀 Server is running on http://localhost:3001 with DB sync
SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (C:\Users\user\Documents\ecommerce-react\node_modules\.pnpm\body-parser@1.20.3\node_modules\body-parser\lib\types\json.js:92:19)
    at C:\Users\user\Documents\ecommerce-react\node_modules\.pnpm\body-parser@1.20.3\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:214:14)
    at invokeCallback (C:\Users\user\Documents\ecommerce-react\node_modules\.pnpm\raw-body@2.5.2\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\user\Documents\ecommerce-react\node_modules\.pnpm\raw-body@2.5.2\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\user\Documents\ecommerce-react\node_modules\.pnpm\raw-body@2.5.2\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:519:28)
    at endReadableNT (node:internal/streams/readable:1698:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)
15.12.11 [tsx] change in ./src\routes\public.ts Rerunning...
cAttempting to connect to the database...
Database connected successfully.
Synchronizing database models...
Database synchronized successfully.
🚀 Server is running on http://localhost:3001 with DB sync
15.19.16 [tsx] change in ./src\routes\public.ts Restarting...
cAttempting to connect to the database...
Database connected successfully.
Synchronizing database models...
Database synchronized successfully.
[server] Port 3001 in use. Retrying on 3002 (9 retries left)...
🚀 Server is running on http://localhost:3002 with DB sync
[server] Note: desired PORT 3001 was busy. Using 3002 instead.
